--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,11 @@
     <string name="hello_idea_fragment">Тут пока ничего нет</string>
     <string name="hello_article_fragment">Тут тоже</string>
     <string name="hello_personal_fragment">Но это все разные фрагменты</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="btn_1">Projects</string>
+    <string name="btn_2">Ideas</string>
+    <string name="btn_3">Articles</string>
+    <string name="btn_4">Person</string>
+
+
 </resources>
