--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,8 @@
     <string name="password">password</string>
     <string name="login">login</string>
 
-    <string name="tab_text_1">tab_text_1</string>
-    <string name="tab_text_2">tab_text_2</string>
+    <string name="tab_text_1">Войти</string>
+    <string name="tab_text_2">Регистрация</string>
     <string name="title_activity_add">AddActivity</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -22,5 +22,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="pass">Пароль</string>
+    <string name="log">Логин</string>
 
 </resources>
